// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles dateless artworks 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "borderColor": "#e5e5e5",
          "borderWidth": 1,
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <AROpaqueImageView
      imageURL="https://d32dm0rphc51dk.cloudfront.net/bJ9I_vJX9ksaKFJAkOAIKg/normalized.jpg"
      style={
        Array [
          Object {
            "height": 55,
            "marginBottom": 12,
            "marginLeft": 12,
            "marginTop": 12,
            "width": 80,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Array [
            Object {
              "alignSelf": "center",
              "marginLeft": 25,
            },
            undefined,
          ],
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
              "textAlign": "left",
            },
            Array [
              Object {
                "fontSize": 14,
              },
              undefined,
            ],
            Object {
              "fontFamily": "AGaramondPro-Regular",
            },
          ]
        }
      >
        Bradley Theodore
      </Text>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "marginTop": 3,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "flexBasis": 0,
                "flexGrow": 3,
                "flexShrink": 1,
                "fontFamily": "AGaramondPro-Italic",
                "fontSize": 14,
              },
              undefined,
            ]
          }
        >
          Karl and Anna Face Off (Diptych)
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Array [
        Object {
          "borderColor": "#e5e5e5",
          "borderWidth": 1,
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <AROpaqueImageView
      imageURL="https://d32dm0rphc51dk.cloudfront.net/bJ9I_vJX9ksaKFJAkOAIKg/normalized.jpg"
      style={
        Array [
          Object {
            "height": 55,
            "marginBottom": 12,
            "marginLeft": 12,
            "marginTop": 12,
            "width": 80,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexDirection": "column",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          Array [
            Object {
              "alignSelf": "center",
              "marginLeft": 25,
            },
            undefined,
          ],
        ]
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
              "textAlign": "left",
            },
            Array [
              Object {
                "fontSize": 14,
              },
              undefined,
            ],
            Object {
              "fontFamily": "AGaramondPro-Regular",
            },
          ]
        }
      >
        Bradley Theodore
      </Text>
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "marginTop": 3,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "flexBasis": 0,
                "flexGrow": 3,
                "flexShrink": 1,
                "fontFamily": "AGaramondPro-Italic",
                "fontSize": 14,
              },
              undefined,
            ]
          }
        >
          Karl and Anna Face Off (Diptych)
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 16,
                "textAlign": "left",
              },
              Array [
                Object {
                  "fontSize": 14,
                },
                Array [
                  Object {
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ],
              ],
              Object {
                "fontFamily": "AGaramondPro-Regular",
              },
            ]
          }
        >
          , 2016
        </Text>
      </View>
    </View>
  </View>
</View>
`;
